--- a/client/components/table/table.jade
+++ b/client/components/table/table.jade
@@ -18,5 +18,5 @@ template(name='table')
                     &nbsp;
                 +contestHeader
         +each users
-            +tableRow table=.. user=this
+            +tableRow table=../table user=this
 
