Better coloring for submits

--- a/client/components/table/table.jade
+++ b/client/components/table/table.jade
@@ -7,7 +7,7 @@ template(name='table')
                 | &nbsp;
             +each contests
                 td
-                    &nbsp;
+                    | &nbsp;
                 td(colspan="{{colspan}}")
                     =name
         tr
