--- a/client/components/userSubmit/userSubmit.less
+++ b/client/components/userSubmit/userSubmit.less
@@ -3,11 +3,11 @@ td.ac {
 }
 
 td.ok {
-    background: #448888;
+    background: #ffff00;
 }
 
 td.wa {
-    background: #ff8888;
+    background: #ff4444;
 }
 
 td.ig {
