--- a/client/components/table/table.jade
+++ b/client/components/table/table.jade
@@ -15,7 +15,7 @@ template(name='table')
                 | &nbsp;
             +each contests
                 td
-                    &nbsp;
+                    | &nbsp;
                 +contestHeader
         +each users
             +tableRow table=../table user=this
