Can output tables

--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -1,7 +1,7 @@
 template(name='tableRow')
     tr
         td
-            =user.name
+            =name
         +each contests
             td
                 | &nbsp;
