--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -5,5 +5,9 @@ template(name='tableRow')
         +each contests
             td
                 | &nbsp;
-            +userInContest user=../user contest=this
+            +userInContest row=../row contest=this
+        td
+            =solved
+        td
+            =attempts
 
