--- a/client/components/userInContest/userInContest.jade
+++ b/client/components/userInContest/userInContest.jade
@@ -1,4 +1,4 @@
 template(name='userInContest')
     +each problems
-        +userSubmit contest=../contest user=../user problem=this
+        +userSubmit problem=this row=../row
 
