--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -3,9 +3,9 @@ template(name='tableRow')
         td
             =name
         +each contests
-            td
-                | &nbsp;
+            td.border
             +userInContest row=../row contest=this
+        td.border
         td
             =solved
         td
