--- a/client/components/table/table.less
+++ b/client/components/table/table.less
@@ -7,3 +7,8 @@
     border-right:1px solid black;
     padding: 3px;
 }
+.mainTable td.border {
+    background:black;
+    padding:0px;
+    border-right:3px solid black;
+}
