--- a/client/components/table/table.less
+++ b/client/components/table/table.less
@@ -12,3 +12,11 @@
     padding:0px;
     border-right:3px solid black;
 }
+.head {
+    text-align:center;
+}
+.example {
+    padding-left:5px;
+    padding-right:5px;
+    margin-bottom:5px;
+}
