--- a/client/components/userSubmit/userSubmit.less
+++ b/client/components/userSubmit/userSubmit.less
@@ -1,15 +1,19 @@
-td.ac {
+.ac {
     background: #44ff44;
 }
 
-td.ok {
+.ok {
     background: #ffff00;
 }
 
-td.wa {
+.wa {
     background: #ff4444;
 }
 
-td.ig {
+.ig {
     background: #aaaaff;
+}
+td.res {
+    font-family: monospace;
+    text-align: center;
 }
