--- a/client/components/table/table.jade
+++ b/client/components/table/table.jade
@@ -10,6 +10,8 @@ template(name='table')
         span.wa.example Частичное решение и т.п.
     p
         | Наведите курсор на ячейку таблицы, чтобы узнать название задачи
+    p
+        | Двойной щелчок по ячейке таблицы открывает соответствующую задачу и, если по ней были посылки, то последнюю посылку по ней
     table.mainTable
         tr
             td
