Clicking on user name selects him

--- a/client/components/table/table.jade
+++ b/client/components/table/table.jade
@@ -14,7 +14,7 @@ template(name='table')
         | Двойной щелчок по ячейке таблицы открывает соответствующую задачу и, если по ней были посылки, то последнюю посылку по ней
     table.mainTable
         tr
-            td
+            td.topLeft
                 | &nbsp;
             +each contests
                 td.border
