--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -1,6 +1,6 @@
 template(name='tableRow')
     tr
-        td
+        td(class="userName {{active}}")
             =name
         +each contests
             td.border
