--- a/client/components/userSubmit/userSubmit.less
+++ b/client/components/userSubmit/userSubmit.less
@@ -1,19 +1,26 @@
 .ac {
     background: #44ff44;
 }
-
 .ok {
     background: #ffff00;
 }
-
 .wa {
     background: #ff4444;
 }
-
 .ig {
     background: #aaaaff;
 }
+
 td.res {
     font-family: monospace;
     text-align: center;
+}
+
+.active, .mainTable td.active {
+    border-top:3px solid black;
+    border-bottom:3px solid black;
+}
+
+td.res.active {
+    font-weight: bold;
 }
