--- a/client/components/userSubmit/userSubmit.jade
+++ b/client/components/userSubmit/userSubmit.jade
@@ -1,4 +1,4 @@
 template(name='userSubmit')
-    td(class="{{class}} res {{active}}" title="{{title}}")
+    td(class="{{class}} res {{active}} {{inactive}}" title="{{title}}")
         =text
 
