Added disqualified support

--- a/client/components/userSubmit/userSubmit.less
+++ b/client/components/userSubmit/userSubmit.less
@@ -32,6 +32,9 @@ td.res {
     font-family: monospace;
     text-align: center;
 }
+.dq {
+    background: black;
+}
 
 .active, .mainTable td.active {
     border-top:3px solid black;
