Chocos calculation and display

--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -1,7 +1,8 @@
 template(name='tableRow')
     tr
         td(class="userName {{active}}")
-            =name
+            a(href="/user/{{userId}}")
+                =name
         +each levels
             +each contests
                 td.border
