--- a/client/components/user/user.jade
+++ b/client/components/user/user.jade
@@ -1,6 +1,13 @@
 template(name='user')
     h1
         =name
+    blockquote
+        div
+            | Рейтинг:
+            =rating
+        div
+            | Активность:
+            =activity
     if lic40
         h2
             | Шоколадки
