--- a/client/components/tableRow/tableRow.jade
+++ b/client/components/tableRow/tableRow.jade
@@ -2,7 +2,7 @@ template(name='tableRow')
     tr
         td(class="userName {{active}}")
             a(href="/user/{{userId}}")
-                =name
+                +userName fullUser
         +each levels
             +each contests
                 td.border
