--- a/client/components/usersSolvedByWeek/usersSolvedByWeek.jade
+++ b/client/components/usersSolvedByWeek/usersSolvedByWeek.jade
@@ -1,6 +1,6 @@
 template(name='usersSolvedByWeek')
     h1
-        | Посылки по неделям
+        | Сданные задачи по неделям
     table.solvedByWeek
         +solvedByWeekHeader userList=this name=true
         +each users
