Basic level calculations

--- a/client/components/solvedByWeekHeader/solvedByWeekHeader.jade
+++ b/client/components/solvedByWeekHeader/solvedByWeekHeader.jade
@@ -4,8 +4,11 @@ template(name='solvedByWeekHeader')
             td
                 | &nbsp;
             td
+                span(title="Уровень")
+                    | У
+            td
                 span(title="Рейтинг")
-                    | R
+                    | Р
             td
                 span(title="Активность")
                     | A
