--- a/client/components/solvedByWeekLine/solvedByWeekLine.jade
+++ b/client/components/solvedByWeekLine/solvedByWeekLine.jade
@@ -5,6 +5,9 @@ template(name='solvedByWeekLine')
                 a(href="/user/{{user._id}}")
                     +userName user
             td
+                span(title="Уровень")
+                    =user.level
+            td
                 span(title="Рейтинг")
                     =user.rating
             td
