--- a/client/components/user/user.jade
+++ b/client/components/user/user.jade
@@ -3,6 +3,9 @@ template(name='user')
         +userName
     blockquote
         div
+            | Уровень:
+            =level
+        div
             | Рейтинг:
             =rating
         div
