--- a/client/components/solvedByWeekHeader/solvedByWeekHeader.jade
+++ b/client/components/solvedByWeekHeader/solvedByWeekHeader.jade
@@ -7,6 +7,9 @@ template(name='solvedByWeekHeader')
                 td
                     span(title="Базовый уровень")
                         | БУ
+                td
+                    span(title="Уровень на начало полугодия")
+                        | УП
             td
                 span(title="Уровень")
                     | У
