--- a/client/components/table/table.less
+++ b/client/components/table/table.less
@@ -8,7 +8,7 @@
     border-right:1px solid black;
     padding: 3px;
 }
-.mainTable td.border {
+td.border {
     background:black;
     padding:0px;
     border-right:3px solid black;
