Better handling of okSubmits table

--- a/client/components/okSubmits/okSubmits.jade
+++ b/client/components/okSubmits/okSubmits.jade
@@ -4,7 +4,7 @@ template(name='okSubmits')
             if needSubmit
                 tr
                     td
-                        a(href="{{href}}",target="_new")
+                        a(href="{{href}}",target="_blank")
                             =time
                     td
                         =user
